--- a/gb/20/3/6/n11918637.md
+++ b/gb/20/3/6/n11918637.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cywoa2300/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cywoa2300/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/cywoa2300/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cywoa2300/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cywoa2300/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cywoa2300/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cywoa2300/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【疫情最前线】方舱出院者多复发 疫情未受控</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/5aa0aa6345e8ede4668b217b96f39eb0-600x400.jpg" />
 <h6>伊朗武汉肺炎死亡人数太多，尸袋不够用纸箱装；武汉方舱出院患者多复发；湖北副省长称疫情未受控，打脸卫健委；世卫将致死率调至3.4%；中科院论文：武汉病毒已突变，变种更难防。（大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年03月06日讯】（大纪元香港记者站报导）伊朗“<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%96%B9%E6%96%8C.md">方斌</a>”直击：伊朗<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>致死人数太多，尸袋不够用纸箱装；武汉市江岸<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%96%B9%E8%88%B1%E5%8C%BB%E9%99%A2.md">方舱医院</a>3月4日证实，出院患者多复发，现死亡。湖北副省长称疫情未受控，打脸中共国家卫健委；世卫将武和肺炎致死率上调至3.4%；中科院3月3日发表论文指，武汉病毒株已发生149个突变点，变种更难防。</p>
-<p><a src=""></a><a href="https://git.io/JvVjI"><img width="600" src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/WrXQ6-wDhmw" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<h2>伊朗“<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%96%B9%E6%96%8C.md">方斌</a>”直击：伊朗尸袋不够 用纸箱装</h2>
-<p><a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>攻入伊朗，一发不可收拾。截至3月5日，伊朗已经有107人死于武汉肺炎，3,513人确诊感染新型冠状病毒，其中有至少包括23名议员，及第一副总统埃沙克．贾汉吉里（Eshaq Jahangiri）等内阁成员。</p>
+<p>【大纪元2020年03月06日讯】（大纪元香港记者站报导）伊朗“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B9%E6%96%8C.md#1">方斌</a>”直击：伊朗<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>致死人数太多，尸袋不够用纸箱装；武汉市江岸<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B9%E8%88%B1%E5%8C%BB%E9%99%A2.md#1">方舱医院</a>3月4日证实，出院患者多复发，现死亡。湖北副省长称疫情未受控，打脸中共国家卫健委；世卫将<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>致死率上调至3.4%；中科院3月3日发表论文指，武汉病毒株已发生149个突变点，变种更难防。</p>
+<p><a src=""></a><a href="https://git.io/JvVjI"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/WrXQ6-wDhmw" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2>伊朗“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B9%E6%96%8C.md#1">方斌</a>”直击：伊朗尸袋不够 用纸箱装</h2>
+<p>武汉肺炎攻入伊朗，一发不可收拾。截至3月5日，伊朗已经有107人死于武汉肺炎，3,513人确诊感染新型冠状病毒，其中有至少包括23名议员，及第一副总统埃沙克．贾汉吉里（Eshaq Jahangiri）等内阁成员。</p>
 <p>由于伊朗并非自由民主的国家消息不透明，外界高度质疑，实际疫情仍被掩盖着，现在外界知道的只是冰山一角。</p>
 <p>此前，武汉人方斌冒着生命危险到武汉各家殡仪馆和医院拍摄实际情况传送到网上。其中，他在第五医院拍摄到“5分钟抬出8具尸体”的影片，撕开中共掩盖真相的铁幕，震惊国内国外。2月9日，方斌被警方带走，至今失联。</p>
 <p>最近，就有伊朗“方斌”拍摄视频直击伊朗放置尸体的场所：因死人太多了，尸袋不够只得用纸箱子装，场景怵目惊心，恐怖程度犹如武汉翻版。据悉，伊朗“方斌”已经被当局抓捕。</p>
-<p>另有推特消息爆料，据<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97%E7%96%AB%E6%83%85.md">伊朗疫情</a>源头库姆（Qom）城的一名医护人员记录，库姆当地就有数十名人感染死亡，因为伊朗不实行火葬要土葬，很多死者已没有举行葬礼埋葬的墓地，并称伊朗政府正在掩盖这场灾难的规模。</p>
-<h2>武汉<a href="https://github.com/cywoa2300/djy/blob/master/gb/tag/%E6%96%B9%E8%88%B1%E5%8C%BB%E9%99%A2.md">方舱医院</a>发紧急通知：很多出院患者复发</h2>
+<p>另有推特消息爆料，据<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97%E7%96%AB%E6%83%85.md#1">伊朗疫情</a>源头库姆（Qom）城的一名医护人员记录，库姆当地就有数十名人感染死亡，因为伊朗不实行火葬要土葬，很多死者已没有举行葬礼埋葬的墓地，并称伊朗政府正在掩盖这场灾难的规模。</p>
+<h2>武汉<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B9%E8%88%B1%E5%8C%BB%E9%99%A2.md#1">方舱医院</a>发紧急通知：很多出院患者复发</h2>
 <p>3月3日，中共官媒《人民日报》刊文，文章引述中共卫生健康委员会主任马晓伟的话称，武汉方舱医院已经做到了“零感染、零死亡、零回头”。</p>
 <p>但武汉市江岸方舱医院一名负责人3月4日向澎湃新闻证实，江岸方舱医院发布了一份《紧急通知》：根据市防疫指挥部最新通报，近期出院患者中复发者较多，导致患者重新入院治疗。</p>
 <p>报导称，江岸方舱医院决定从3月5日开始对所有在舱拟出院病患抽血加做病毒抗体Ig-M与Ig-G的检查。</p>
@@ -59,45 +59,52 @@
 <p>另外值得注意的是，检测的103个样本显示，大部分患者只感染了L亚型或S亚型中的一个。但其中一位近期有过武汉旅行史的美国患者分离出的病毒株，显示其可能同时感染了L型和S型新冠病毒。不过，作者表示目前还无法排除新突变型的可能性。</p>
 <p>此外，巴西和英国专家也完成巴西首宗确诊的病毒测序，该个案曾去过意大利。结果发现患者体内新冠病毒与武汉公布的病毒基因相比，有3处不同，证实病毒在传播过程中已出现变异。</p>
 <p>责任编辑：连书华 #</p>
+<div id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd"></div>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/6/n11918637.htm">【疫情最前线】方舱出院者多复发 疫情未受控</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11915482.htm">【疫情最前线】加国爆中共隐瞒疫情新证据</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11913160.htm">【疫情最前线】大陆富豪“逃疫”新西兰</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910640.htm">【疫情最前线】发现病毒秘密 上海p3实验室遭关闭</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907734.htm">【疫情最前线】新冠病毒的“亲共线路”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11903757.htm">【疫情最前线】网信办十人染疫 五毛被攻陷</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901518.htm">【疫情最前线】湖北官方曾下令销毁病毒样本</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859604.htm">【疫情最前线】病毒突变更致命 恐酿大瘟疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856687.htm">【疫情最前线】死亡人数恐上万 6成病逝家中</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853087.htm">【疫情最前线】证据指中共研发致命生化武器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】新冠病毒突变 感染宠物 出院也复发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913682.htm">迅速应变保护公民利益 台湾防疫经验登权威期刊</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913363.htm">【翻墙必看】习会告诉美国新冠病毒真相？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11914017.htm">预示疫情发生？湖北省两大地标设计引议论</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902923.htm">犹太拉比谈武汉肺炎：弥赛亚现身前十灾重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908043.htm">子丑之年江边起──预言中的“大瘟疫”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902013.htm">《推背图》56象与互卦 预言中共剥烂</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877987.htm">为何一地蝗虫灾 一地凤凰来？天人感应不虚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909414.htm">陆媒三炮齐发 揭中共卫健委隐瞒疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910876.htm">【世事关心】川普亲信：实验室是病毒来源之一</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910939.htm">【拍案惊奇】陈秋实生死谜 中共买防弹衣玄机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913399.htm">【拍案惊奇】俄华人谈防疫见闻 忆苏联炭疽泄漏</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/21/n11811116.htm">【思想领袖】专访普雷格：美大学被左派极端化</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11914571.htm">【直播回放】3.4新肺炎追踪：王沪宁扰乱抗疫？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11911910.htm">刘真装心室辅助器 医生判断：最多撑3个月</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/4/n11913612.htm">陈零九、邱锋泽跨界主持 加入《娱乐百分百》</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11913007.htm">陆影院被令复工又叫停 活下去成行业唯一目标</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910094.htm">赞公主邮轮船长暖举 魔术师陈日昇：帅到爆</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909319.htm">被辛龙收当干妹 严立婷盼嫂子刘真渡过难关</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/cywoa2300/djy/blob/master/gb/20/3/6/n11918637.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cywoa2300/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cywoa2300/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cywoa2300/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cywoa2300/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cywoa2300/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/4/n11915482.md#1">【疫情最前线】加国爆中共隐瞒疫情新证据</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/3/n11913160.md#1">【疫情最前线】大陆富豪“逃疫”新西兰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/2/n11910640.md#1">【疫情最前线】发现病毒秘密 上海p3实验室遭关闭</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11907734.md#1">【疫情最前线】新冠病毒的“亲共线路”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903757.md#1">【疫情最前线】网信办十人染疫 五毛被攻陷</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/27/n11901518.md#1">【疫情最前线】湖北官方曾下令销毁病毒样本</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/10/n11859604.md#1">【疫情最前线】病毒突变更致命 恐酿大瘟疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/9/n11856687.md#1">【疫情最前线】死亡人数恐上万 6成病逝家中</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/8/n11853087.md#1">【疫情最前线】证据指中共研发致命生化武器</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11850310.md#1">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943151.md#1">美专家：中国恢复正常后或爆发新一波疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945316.md#1">疫情冲击 水果卖不出 批发市场用铲车倒掉</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/6/n11918637.htm">【疫情最前线】方舱出院者多复发 疫情未受控</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/3/6/n11918637.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
